# Runic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  statistics.py
data/: fake.csv
docs/superpowers/plans/: 2026-04-22-interactive-runic-cli.md  2026-04-22-runic-completion-hints.md  2026-04-23-embed-file-picker.md
docs/superpowers/progress/: 2026-04-23-embed-file-picker-next-steps.md  2026-04-23-embed-file-picker-reviews.md  2026-04-23-embed-file-picker-status.md
docs/superpowers/specs/: 2026-04-21-interactive-runic-cli-design.md  2026-04-22-runic-completion-hints-design.md  2026-04-23-embed-file-picker-design.md  2026-04-23-ollama-http-pull-design.md
runic/: __init__.py  backends.py  cli.py  conduit.py  conjurer.py  dispatcher.py  events.py  handlers.py  jobs.py  requests.py  result.py  runtime.py  spellbooks.py  spells.py
runic/errors/: __init__.py  ambiguous_query.py  default.py  duplicate_registration.py  runic.py  service_not_found.py  task_not_found.py
runic/interactive/: __init__.py  controller.py  embed_picker.py  install_status.py  models.py  parsing.py  registry.py  shell.py
runic/interactive/runners/: __init__.py  base.py  (+1 more)
tests/: test_backends.py  test_conduit.py  test_conjurer.py  test_dispatcher.py  test_embed_picker.py  test_events.py  test_handlers.py  test_integration.py  test_interactive_controller.py  test_interactive_install_status.py  test_interactive_ollama.py  test_interactive_parsing.py  test_interactive_registry.py  test_interactive_shell.py  test_jobs.py  test_requests.py  test_result.py  test_runtime.py  test_spellbooks.py  test_spells.py
wyvern/: __init__.py  jobs.py  requests.py  result.py  runtime.py
wyvern.egg-info/: PKG-INFO  SOURCES.txt
(+3 files in other folders)
